Fix z-index and add alert to front of page

--- a/src/styles/adminForms.scss
+++ b/src/styles/adminForms.scss
@@ -1,5 +1,11 @@
 @use '../styles/vars';
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 .discard-button {
   font-family: sans-serif;
   font-size: 24px;
@@ -50,7 +56,7 @@
 }
 
 .wrapper {
-  display: flex;
+  display: block;
 }
 
 h2 {
@@ -121,8 +127,19 @@ h2 {
   }
 }
 
-.forms__item-content-window {
+.window {
+  position: fixed;
+  display: flex;
+  z-index: 2;
   background-color: #20202054;
   height: 100%;
   width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  textarea {
+    width: 200px;
+    height: 20px;
+  }
 }
